--- a/example/style.css
+++ b/example/style.css
@@ -29,3 +29,7 @@ body {
     font-size: 24px;
     font-weight: bold;
 }
+
+svg #nomes text{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
