alterando exemplo para usar svg externo ao invés de embeddeg no html (só funciona rodando em servidor web local, não em filesystem)

--- a/example/style.css
+++ b/example/style.css
@@ -80,10 +80,11 @@ h1 {
     background-color: #d32f2f;
 }
 
+/* 
 svg #tracados path {
     cursor: pointer;
 }
 
 svg #nomes text {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+} */
